--- a/MapReduceExamples.ipynb
+++ b/MapReduceExamples.ipynb
@@ -4898,7 +4898,395 @@
     "!python Custorder.py customer-orders.csv"
    ]
   },
-  
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Assignment Starts:Your Task**\n",
+    "\n",
+    "* Implement the code for the given problems .\n",
+    "* We will be giving you some hints.\n",
+    "* As python is very similiar to pseudo codes, we will give the solutions for problems in python.(Later On)\n",
+    "* Please refer to docs and contact me for any help.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 1\n",
+    "\n",
+    "The nth term of the sequence of triangle numbers is given by, $tn = ½n(n+1)$; so the first ten triangle numbers are:\n",
+    "\n",
+    "$$1, 3, 6, 10, 15, 21, 28, 36, 45, 55, ...$$\n",
+    "\n",
+    "By converting each letter in a word to a number corresponding to its alphabetical position and adding these values we form a word value. For example, the word value for SKY is $19 + 11 + 25 = 55 = t10 $. If the word value is a triangle number then we shall call the word a triangle word.\n",
+    "\n",
+    "Using words.txt a file with words in each line, find out how many are triangle words are there in the file?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Brute Force Approach for Problem 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting Trianglewordcount.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file Trianglewordcount.py\n",
+    "from mrjob.job import MRJob\n",
+    "\n",
+    "TriangleNumbers={ n*(n+1)/2:True for n in range(1,10000)}\n",
+    "\n",
+    "def trianglewords(words):\n",
+    "    count=0\n",
+    "    for word in words:\n",
+    "        t=0\n",
+    "        for char in word:\n",
+    "            if ord(char)<= ord('Z') and  ord(char)>= ord('A'):\n",
+    "                t+=ord(char)-ord('A')+1 # Ord gives the ascii value of a character\n",
+    "        default = False\n",
+    "        if TriangleNumbers.get(t, default):\n",
+    "            count+=1\n",
+    "    return count\n",
+    "\n",
+    "class TriangleWordcount(MRJob):\n",
+    "    def mapper(self,key,line):\n",
+    "        yield \"TraingleWords Count\",trianglewords(line.split())\n",
+    "    \n",
+    "    def reducer(self,key,values):\n",
+    "        yield key, sum(values)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    TriangleWordcount.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using configs in /etc/mrjob.conf\n",
+      "Creating temp directory /root/Trianglewordcount.root.20161014.143816.990840\n",
+      "Running step 1 of 1...\n",
+      "Streaming final output from /root/Trianglewordcount.root.20161014.143816.990840/output...\n",
+      "\"TraingleWords Count\"\t7615\n",
+      "Removing temp directory /root/Trianglewordcount.root.20161014.143816.990840...\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python Trianglewordcount.py words2.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using configs in /etc/mrjob.conf\n",
+      "Creating temp directory /root/Trianglewordcount.root.20161014.143821.545101\n",
+      "Running step 1 of 1...\n",
+      "Streaming final output from /root/Trianglewordcount.root.20161014.143821.545101/output...\n",
+      "\"TraingleWords Count\"\t162\n",
+      "Removing temp directory /root/Trianglewordcount.root.20161014.143821.545101...\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python Trianglewordcount.py words3.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "** What to do for Problem 1? **\n",
+    "> Try to implement a Function which solves a quadratic Equation.\n",
+    "> $$ n^2 + n - 2t = 0 $$\n",
+    "> and check if it has a proper solution.\n",
+    "> Use function in the mapper.\n",
+    "\n",
+    "**Questions to be Answered After Solving the Problem**\n",
+    "* How does the yield keyword differ from return ?\n",
+    "* Can every problem be reduced to mapreduce Paradigim ?\n",
+    "* What is the role of steps, streamming and the creation of temp directory ?\n",
+    "* How to configure MRjob ?\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 2\n",
+    "We need to sort a file by lines and store it in another file.\n",
+    "Use the program given to generate a file with random words.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tutorials to refer on\n",
+    "* https://www.dezyre.com/hadoop-tutorial/hadoop-mapreduce-tutorial-\n",
+    "* http://blog.ditullio.fr/2015/12/18/hadoop-basics-working-with-sequence-files/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 3\n",
+    "Triangle, pentagonal, and hexagonal numbers are generated by the following formulae:\n",
+    "* Triangle \t  \t$Tn=n(n+1)/2$ \t  \t$1, 3, 6, 10, 15, ...$\n",
+    "* Pentagonal \t  \t$Pn=n(3n−1)/2$ \t  \t$1, 5, 12, 22, 35, ...$\n",
+    "* Hexagonal \t  \t$Hn=n(2n−1)$ \t  \t$1, 6, 15, 28, 45, ...$\n",
+    "\n",
+    "By converting each letter in a word to a number corresponding to its alphabetical position and adding these values we form a word value. For example, the word value for SKY is $19 + 11 + 25 = 55 = t10 $. If the word value is a triangle number then we shall call the word a triangle word.The same way we can define Triangle word,Pentagonal word and Hexagonal word.\n",
+    "Let set of Triangle words be T , set of Pentagonal words be P and set of Hexagonal words be H.Given a file of words find T,P and H\n",
+    "Find number of words in the Union of T , P and H.\n",
+    "\n",
+    "Use Exclusion -Inclusion Principle."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 4 (Open Problem)\n",
+    "\n",
+    "Implement the Famous Google Page Rank Algorithm in a minmium set up locally.\n",
+    "We use the below Large Scale Dataset.\n",
+    "* http://academictorrents.com/details/411576c7e80787e4b40452360f5f24acba9b5159\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Desciption of dataset:\n",
+    "A Large-Scale Real-World Dataset for Structured Web Date Extraction\n",
+    "\n",
+    "1.Motivation\n",
+    "This dataset is a real-world web page collection used for research on the automatic extraction of structured data (e.g., attribute-value pairs of entities) from the Web. We hope it could serve as a useful benchmark for evaluating and comparing different methods for structured web data extraction.\n",
+    "\n",
+    "\n",
+    "2.Contents of the Dataset\n",
+    "Currently the dataset involves:\n",
+    "1.\t8 verticals with diverse semantics;\n",
+    "1.\t80 web sites (10 per vertical);\n",
+    "1.\t124,291 web pages (200~2,000 per web site), each containing a single data record with detailed information of an entity;\n",
+    "1.\t32 attributes (3~5 per vertical) associated with carefully labeled ground-truth of corresponding values in each web page. The goal of structured data extraction is to automatically identify the values of these attributes from web pages.\n",
+    "\n",
+    "The involved verticals are summarized as follows:\n",
+    "Vertical #Sites #Pages #Attributes Attributes\n",
+    "* Auto        10\t17,923\t4\tmodel, price, engine, fuel_economy\n",
+    "* Book        10\t20,000\t5\ttitle, author, isbn_13, publisher, publication_date\n",
+    "* Camera      10\t5,258\t3\tmodel, price, manufacturer\n",
+    "* Job         10\t20,000\t4\ttitle, company, location, date_posted\n",
+    "* Movie       10\t20,000\t4\ttitle, director, genre, mpaa_rating\n",
+    "* NBA Player  10\t4,405\t4\tname, team, height, weight\n",
+    "* Restaurant  10\t20,000\t4\tname, address, phone, cuisine\n",
+    "* University  10\t16,705\t4\tname, phone, website, type\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Algorithm:\n",
+    "   > 1. Fetch all web page descriptions and map it with urls.\n",
+    "   > 1. Count all inwards links to a web page and outwards links from a webpage to another page.\n",
+    "   > 1. Calculate the Page Rank Score for Each Page using below formula\n",
+    "   > $ Score(webpage)=50*No of inward links + 10*No of outward links + Reputation $ \n",
+    "   > Let us assume Reputation to be 0 for time being for all pages.\n",
+    "   > 1. Create a file or database with records such that each record contains the following info.\n",
+    "<table>\n",
+    "<tr>\n",
+    "<td>\n",
+    "    Url (Primary key)\n",
+    "</td>\n",
+    "<td>\n",
+    "    Description\n",
+    "</td>\n",
+    "<td>\n",
+    "    Inward Links Count\n",
+    "</td>\n",
+    "<td>\n",
+    "    Outward Links Count\n",
+    "</td>\n",
+    "<td>\n",
+    "    Page Rank Score\n",
+    "</td>\n",
+    "</tr>\n",
+    "</table> \n",
+    "  > 1. Then sort the pages on the basis the Page rank Score. \n",
+    "  \n",
+    "  > 2. Query and display the records according to the ranks. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** An example of web page header with description.\n",
+    "Use a web page paraser or xml paraser to get meta tags **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting Work.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file Work.html\n",
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "<head>\n",
+    "    <title>Not a Meta Tag, but required anyway </title>\n",
+    "    <meta name=\"description\" content=\"Links to Popular Sites\">\n",
+    "    <meta http-equiv=\"content-type\" content=\"text/html;charset=UTF-8\">\n",
+    "</head>\n",
+    "<body>\n",
+    "<a href=\"www.google.co.in\">Google</a>\n",
+    "<a href=\"www.yahoo.co.in\">Yahoo</a>\n",
+    "<a href=\"www.wiki.com\">Wiki</a>\n",
+    "<a href=\"www.github.in\">Github</a>\n",
+    "</body>\n",
+    "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Work.html\n",
+      "/home/fin\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls *.html\n",
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** An Example Program to get Desciption and All links from a web page.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outward links to other pages:\n",
+      "www.google.co.in\n",
+      "www.yahoo.co.in\n",
+      "www.wiki.com\n",
+      "www.github.in\n",
+      "Description:\n",
+      "Links to Popular Sites\n"
+     ]
+    }
+   ],
+   "source": [
+    "import urllib2,htmllib,formatter\n",
+    "from bs4 import BeautifulSoup\n",
+    "#Formatter is used to Format the Output\n",
+    "format = formatter.AbstractFormatter(formatter.NullWriter())\n",
+    "#Obtaining the Html web page\n",
+    "data =  urllib2.urlopen(\"file:////home/fin/Work.html\").read()\n",
+    "ptext = htmllib.HTMLParser(format)\n",
+    "ptext.feed(data)\n",
+    "#Parasing the Page and printing the list\n",
+    "print(\"Outward links to other pages:\")\n",
+    "for link in ptext.anchorlist:\n",
+    "    print(link)\n",
+    "\n",
+    "\n",
+    "soup3= BeautifulSoup(data,\"lxml\")\n",
+    "print(\"Description:\")\n",
+    "desc= soup3.find(attrs={'name':'Description'})\n",
+    "if desc == None:\n",
+    "    desc= soup3.find(attrs={'name':'description'})\n",
+    "try:\n",
+    "    print desc['content']\n",
+    "except Exception as e:\n",
+    "    print '%s (%s)' % (e.message, type(e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n"
+   ]
+  }
  ],
  "metadata": {
   "kernelspec": {
